--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="gray_1">#7D8597</color>
     <color name="gray_2">#5C677D</color>
     <color name="gray_3">#33415C</color>
+    <color name="purple_1">#4E026E</color>
+    <color name="purple_2">#3E0475</color>
 </resources>
