--- a/app/src/main/res/drawable/item_main_menu.xml
+++ b/app/src/main/res/drawable/item_main_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="24dp"/>
-    <stroke android:color="@color/gray_3" android:width="4dp"/>
-
+    <corners android:bottomLeftRadius="24dp" android:bottomRightRadius="24dp"/>
+    <stroke android:color="@color/purple_1" android:width="4dp"/>
 </shape>
