--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
     android:background="@drawable/gradient_main_bg">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="-5dp"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="-5dp"
         android:background="@drawable/item_main_menu"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,21 +24,63 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingHorizontal="20dp">
 
             <ImageButton
-                android:id="@+id/book_1"
-                android:layout_width="45dp"
+                android:id="@+id/CombinatoricsButton"
+                android:layout_width="0dp"
                 android:layout_height="45dp"
-                android:scaleType="centerInside"
-                android:contentDescription="hello"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
-                app:srcCompat="@drawable/img_book"/>
+                android:contentDescription="@string/CombinatoricsDescription"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/img_book" />
 
+            <ImageButton
+                android:id="@+id/MatricesButton"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/MatrixDescription"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/img_book" />
 
+            <ImageButton
+                android:id="@+id/MainFormulasButton"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/MainFormulasDescription"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/img_book" />
+
+            <ImageButton
+                android:id="@+id/GuideButton"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/GuideDescription"
+                android:layoutDirection="rtl"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/img_book" />
 
         </LinearLayout>
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/texttipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textColor="@color/gray_0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
