--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="gray_0">#979DAC</color>
     <color name="gray_1">#7D8597</color>
     <color name="gray_2">#5C677D</color>
+    <color name="gray_2_transparent">#805C677D</color>
     <color name="gray_3">#33415C</color>
     <color name="purple_1">#4E026E</color>
     <color name="purple_2">#3E0475</color>
