--- a/app/src/main/res/drawable/gradient_main_bg.xml
+++ b/app/src/main/res/drawable/gradient_main_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:angle="270"
+        android:angle="90"
         android:centerX="@integer/material_motion_duration_medium_2"
-        android:startColor="@color/dark_blue"
-        android:centerColor="@color/purple_2"
-        android:endColor="@color/dark_blue" />
+        android:startColor="@color/purple_2"
+        android:centerColor="@color/purple_0"
+        android:endColor="@color/purple_2" />
 </shape>
